# mosaic

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  schema.py
configs/ifeval_constraints/: tulu3_constraints.jsonl
instruction_following_eval/: INSTRUCTION_REFERENCE.md  LOW_ACCURACY_ANALYSIS.md  evaluation_main.py  run_tulu_eval.py
instruction_following_eval/data/: instruction_kwargs_reference.json
score/: experiment_utils.py  ifeval_eval.py  ifeval_score.py  need.py  orbench_agg.py  orbench_eval.py  orbench_experiment.py  reaggregate.py  report.py  util.py  xguard_agg.py  xguard_eval.py  xguard_experiment.py
scripts/: README.md  data_constructor.py  distribution_agent.py  eval_model.py  finetune_xguard_only.py  merge_eval_to_parquet.py  pareto.py  run_loop.py  test_l3_reliability.py  vllm_inference.py
